# JSON-to-TLV

./: CMakeLists.txt  Makefile  README.md  json_test_data  packer.c  packer.h  packer_decode.c  packer_decode.h  packer_encode.c  packer_encode.h
tests/: CMakeLists.txt  t_encode_basic
utils/: CMakeLists.txt
utils/jansson/includes/: jansson.h  jansson_config.h  jansson_private.h
utils/jansson/src/: load.c
utils/tlv/includes/: tlv.h
utils/tlv/src/: tlv.c
